--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <title>react1</title>
 </head>
 <body>
-    <!-- <div id="root"></div> -->
+    <div id="root"></div>
     <div id="root1">
         <h1>khushi </h1>
         <h1>khushi </h1>
         <h1>khushi </h1>
         <h1>khushi </h1>
     </div>
-    <!-- <script>
+    <script>
        const heading = document.createElement("h1");
        heading.innerHTML = "Hello from khushi";
        const root = document.getElementById("root");
        root.appendChild(heading);
 //  cdn is a website where react has being hosted and we are just pulling it to our code ...!
-    </script> -->
+    </script>
 
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-<!-- <script> 
+<script> 
       const heading1 = React.createElement("h1", {}, "hello from react");
       const root1 = ReactDOM.createRoot(document.getElementById("root"));
       root1.render(heading1);
 
 
-</script> -->
+</script>
 <script>
     const parent = React.createElement(
     "div", 
@@ -49,6 +49,6 @@
 </script>
 </script>
 
-<!-- <script src="./app.js"></script> -->
+<script src="./app.js"></script>
 </body>
 </html>
