--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     ) 
 );
 
-    const root1 = ReactDOM.createRoot(document.getElementById("root1"));
+    // const root1 = ReactDOM.createRoot(document.getElementById("root1"));
     root1.render(parent);
     
 </script>
