--- a/lec 1/index.html
+++ b/lec 1/index.html
@@ -6,14 +6,36 @@
     <title>react1</title>
 </head>
 <body>
-    <div id="root"></div>
-    <div id="root1">
-        <h1>khushi </h1>
-        <h1>khushi </h1>
-        <h1>khushi </h1>
-        <h1>khushi </h1>
+    <div id="root">
+        <h1>Khushi is here</h1>
     </div>
-    <script>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+    <!-- <div id="root1">
+        <h1>khushi </h1> -->
+        
+    <!-- </div> -->
+    <!-- <script>
        const heading = document.createElement("h1");
        heading.innerHTML = "Hello from khushi";
        const root = document.getElementById("root");
@@ -47,8 +69,8 @@
     root1.render(parent);
     
 </script>
-</script>
+</script> -->
 
-<script src="./app.js"></script>
+<script type = "module" src="./app.js"></script>
 </body>
 </html>
