--- a/lec 1/index.html
+++ b/lec 1/index.html
@@ -12,7 +12,6 @@
     </div>   
     <!-- <div id="root1">
         <h1>khushi </h1> -->
-        
     <!-- </div> -->
     <!-- <script>
        const heading = document.createElement("h1");
@@ -22,7 +21,7 @@
         
 //  cdn is a website where react has being hosted and we are just pulling it to our code ...!
     </script>
-
+// content delivery network
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
