--- a/lec 1/index.html
+++ b/lec 1/index.html
@@ -51,6 +51,7 @@
 </script>
 </script> -->
 
-<script type = "module" src="./app.js"></script>
+<script type = "module" src="./src/app.js"></script>
 </body>
 </html>
+
